intellij format + fixes